# bilibil_bot

./: .env.dev  .env.prod  .gitignore  .pdm-python  README.md  config.yml  pyproject.toml  启动！.bat
bili/plugins/: __test__.py
bili/plugins/test_chat/: __init__.py
blivedm/: chat.py  open_live_sample.py  sample.py
blivedm/blivedm/: handlers.py  utils.py
blivedm/blivedm/clients/: open_live.py  web.py  ws_base.py
blivedm/blivedm/models/: open_live.py  pb.py  web.py
