[project]
name = "bili"
version = "0.1.0"
description = "bili"
readme = "README.md"
requires-python = ">=3.8, <4.0"
dependencies = [
    "httpx>=0.24.1",
]

[tool.nonebot]
adapters = [
    # { name = "Console", module_name = "nonebot.adapters.console" },
    { name = "BilibiliLive", module_name = "nonebot.adapters.bilibili" }
]
plugins = []
plugin_dirs = ["bili/plugins"]
builtin_plugins = []

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pyright]
pythonVersion = "3.8"

[tool.black]
line-length = 89
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
# skip-string-normalization = true

[tool.ruff.isort]
extra-standard-library = ["typing_extensions"]

[tool.ruff]
ignore = [
    "B008",
    "B905",
    "E501",
    "FBT002",
    "PGH003",
    "RUF001",
    "RUF002",
    "RUF003",
    "RUF006",
    "RUF100",
    "SIM117",
    "TRY002",
    "TRY003",
]
select = [
    "A",
    "ARG",
    "ASYNC",
    "B",
    "C4",
    "COM",
    "E",
    "F",
    "FBT",
    "FLY",
    "I",
    "ISC",
    "N",
    "PIE",
    "PGH",
    "PTH",
    "PYI",
    "Q",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "SLOT",
    "TRY",
]
